syntax = "proto3";
package dkv.serverpb;
option go_package = "serverpb";

service DKV {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
}

message Status {
  int32 code = 1;
  string message = 2;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  Status status = 1;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  Status status = 1;
  bytes value = 2;
}
